Fix carousel container clipping and sort event by start date

--- a/client/src/assets/scss/views/homepage.scss
+++ b/client/src/assets/scss/views/homepage.scss
@@ -10,6 +10,12 @@
     text-align: center;
   }
 
+  .carousel-3d-container {
+    --container-padding: 1rem;
+    padding: var(--container-padding) 0;
+    height: calc(602px + var(--container-padding) + var(--container-padding)) !important;
+  }
+
   .slide {
     background-color: #fcfcfc;
     border: solid 1px #eee;
